# python_cpp_project_template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
cpp_executables/: example_script
include/foundation/: example.hpp
scripts/: example.py
src/project/: foundation.pyi  types.py
src/project/foundation/: CMakeLists.txt  example.cpp  python.cpp
tests/foundation/: test_example.py
tests/utils/: test_example.py
tools/: build.py
